12월 업데이트

--- a/Kaiserreich Korean Translation/localisation/KR_Victory_Points_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Victory_Points_l_english.yml
@@ -36,9 +36,12 @@ VICTORY_POINTS_678:0 "뮐하우젠"
 VICTORY_POINTS_688:0 "잘츠부르크"
 VICTORY_POINTS_690:0 "브라쇼브"
 VICTORY_POINTS_692:0 "뮌헨"
+VICTORY_POINTS_719:0 "노보로시스크"
 VICTORY_POINTS_740:0 "빌바오"
 VICTORY_POINTS_747:0 "알메리아"
+VICTORY_POINTS_748:0 "스타브로폴"
 VICTORY_POINTS_758:0 "라코루냐"
+VICTORY_POINTS_759:0 "우디네"
 VICTORY_POINTS_778:0 "안시"
 VICTORY_POINTS_788:0 "노퍽"
 VICTORY_POINTS_792:0 "베이루트"
@@ -52,6 +55,7 @@ VICTORY_POINTS_911:0 "툴롱"
 VICTORY_POINTS_921:0 "카이세리"
 VICTORY_POINTS_925:0 "안코나"
 VICTORY_POINTS_931:0 "바다호스"
+VICTORY_POINTS_934:0 "차오양"
 VICTORY_POINTS_940:0 "코냐"
 VICTORY_POINTS_947:0 "부르사"
 VICTORY_POINTS_949:0 "소피아"
@@ -67,12 +71,13 @@ VICTORY_POINTS_1070:0 "하이커우"
 VICTORY_POINTS_1086:0 "예루살렘"
 VICTORY_POINTS_1092:0 "히로시마"
 VICTORY_POINTS_1117:0 "니가타"
+VICTORY_POINTS_1126:0 "라구아트"
 VICTORY_POINTS_1130:0 "토브루크"
 VICTORY_POINTS_1145:0 "알제"
 VICTORY_POINTS_1149:0 "트리폴리"
 VICTORY_POINTS_1150:0 "다롄"
+VICTORY_POINTS_1160:0 "보네"
 VICTORY_POINTS_1170:0 "라시오"
-VICTORY_POINTS_1181:0 "코스터맨스스타드"
 VICTORY_POINTS_1182:0 "도쿄"
 VICTORY_POINTS_1208:0 "쿠칭"
 VICTORY_POINTS_1221:0 "바탕가스"
@@ -100,7 +105,8 @@ VICTORY_POINTS_1550:0 "산티아고데쿠바"
 VICTORY_POINTS_1562:0 "샌디에고"
 VICTORY_POINTS_1563:0 "빡쎄"
 VICTORY_POINTS_1581:0 "임팔"
-VICTORY_POINTS_1591:0 "알마아타"
+VICTORY_POINTS_1588:0 "치치하얼"
+VICTORY_POINTS_1591:0 "베르니"
 VICTORY_POINTS_1592:0 "참빠삭"
 VICTORY_POINTS_1595:0 "인디애나폴리스"
 VICTORY_POINTS_1599:0 "트빌리시"
@@ -123,6 +129,7 @@ VICTORY_POINTS_1903:0 "말라보"
 VICTORY_POINTS_1908:0 "자이푸르"
 VICTORY_POINTS_1909:0 "코나크리"
 VICTORY_POINTS_1929:0 "분케야"
+VICTORY_POINTS_1939:0 "나이로비"
 VICTORY_POINTS_1944:0 "마라카이보"
 VICTORY_POINTS_1950:0 "보요맨"
 VICTORY_POINTS_1951:0 "로메"
@@ -139,6 +146,9 @@ VICTORY_POINTS_2041:1 "스리나가르"
 VICTORY_POINTS_2045:0 "텐슈이"
 VICTORY_POINTS_2050:0 "라고스"
 VICTORY_POINTS_2056:0 "니아메"
+VICTORY_POINTS_2058:0 "오쉬"
+VICTORY_POINTS_2080:0 "야운데"
+VICTORY_POINTS_2081:0 "포트 슈테튼"
 VICTORY_POINTS_2086:0 "델리"
 VICTORY_POINTS_2089:0 "바사"
 VICTORY_POINTS_2097:0 "바그다드"
@@ -149,10 +159,12 @@ VICTORY_POINTS_2197:0 "크리스트처치"
 VICTORY_POINTS_2210:0 "아레키파"
 VICTORY_POINTS_2211:0 "더니든"
 VICTORY_POINTS_2220:0 "우숨브라"
+VICTORY_POINTS_2229:0 "스바코프문트"
 VICTORY_POINTS_2489:0 "트루크"
 VICTORY_POINTS_3010:0 "에드먼턴"
 VICTORY_POINTS_3022:0 "트론헤임"
 VICTORY_POINTS_3083:0 "투르쿠"
+VICTORY_POINTS_3109:0 "포트 레이븐"
 VICTORY_POINTS_3122:0 "바사"
 VICTORY_POINTS_3134:0 "무르만스크"
 VICTORY_POINTS_3137:0 "탐페레"
@@ -235,6 +247,7 @@ VICTORY_POINTS_4206:0 "텔압브"
 VICTORY_POINTS_4226:0 "부인"
 VICTORY_POINTS_4241:0 "다바오"
 VICTORY_POINTS_4245:0 "콜카타"
+VICTORY_POINTS_4250:0 "카라간다"
 VICTORY_POINTS_4268:0 "누메아"
 VICTORY_POINTS_4275:0 "마리트" #Myeik
 VICTORY_POINTS_4286:0 "수바"
@@ -261,6 +274,7 @@ VICTORY_POINTS_4464:0 "빌록시"
 VICTORY_POINTS_4504:0 "구이양"
 VICTORY_POINTS_4512:0 "디야르바키르"
 VICTORY_POINTS_4516:0 "파트나"
+VICTORY_POINTS_4528:0 "스프링복"
 VICTORY_POINTS_4529:0 "디엔비엔푸"
 VICTORY_POINTS_4543:0 "오클랜드"
 VICTORY_POINTS_4569:0 "세인트루이스"
@@ -287,7 +301,6 @@ VICTORY_POINTS_4883:0 "나그푸르"
 VICTORY_POINTS_4893:0 "헤라트"
 VICTORY_POINTS_4915:0 "아그라"
 VICTORY_POINTS_4925:0 "청두"
-VICTORY_POINTS_4927:0 "바마코"
 VICTORY_POINTS_4948:0 "다카르"
 VICTORY_POINTS_4952:0 "베넹스타드"
 VICTORY_POINTS_4956:0 "산루이스포토시주"
@@ -300,7 +313,6 @@ VICTORY_POINTS_5029:0 "마슈하드"
 VICTORY_POINTS_5033:0 "라사"
 VICTORY_POINTS_5034:0 "누악쇼트"
 VICTORY_POINTS_5037:0 "메카"
-VICTORY_POINTS_5054:0 "야운데"
 VICTORY_POINTS_5068:0 "하르게이사"
 VICTORY_POINTS_5074:0 "아덴"
 VICTORY_POINTS_5107:0 "포르탈레자"
@@ -312,6 +324,8 @@ VICTORY_POINTS_5168:0 "헤시피"
 VICTORY_POINTS_5199:0 "루사카"
 VICTORY_POINTS_5210:0 "몸바사"
 VICTORY_POINTS_5230:0 "라파스"
+VICTORY_POINTS_5231:0 "블룸폰테인"
+VICTORY_POINTS_6039:0 "부에아"
 VICTORY_POINTS_6050:0 "스톡홀름"
 VICTORY_POINTS_6103:0 "런던"
 VICTORY_POINTS_6115:0 "오슬로"
@@ -350,11 +364,13 @@ VICTORY_POINTS_6613:0 "리옹"
 VICTORY_POINTS_6626:0 "트리에스테"
 VICTORY_POINTS_6652:0 "크라이오바"
 VICTORY_POINTS_6657:0 "라로셸"
+VICTORY_POINTS_6666:0 "제네바"
 VICTORY_POINTS_6682:0 "아라드"
 VICTORY_POINTS_6696:0 "루이빌"
 VICTORY_POINTS_6706:0 "갈라치"
 VICTORY_POINTS_6710:0 "디트로이트"
 VICTORY_POINTS_6711:0 "콜로즈바르"
+VICTORY_POINTS_6727:0 "체타테아알버"
 VICTORY_POINTS_6732:0 "보스턴"
 VICTORY_POINTS_6766:0 "툴루즈"
 VICTORY_POINTS_6780:0 "토리노"
@@ -371,6 +387,7 @@ VICTORY_POINTS_6973:0 "라스페치아"
 VICTORY_POINTS_6984:0 "볼티모어"
 VICTORY_POINTS_6994:0 "아오모리"
 VICTORY_POINTS_6999:0 "충칭"
+VICTORY_POINTS_7005:0 "가베스"
 VICTORY_POINTS_7011:0 "카이로"
 VICTORY_POINTS_7014:0 "상하이"
 VICTORY_POINTS_7015:0 "박장"
@@ -378,6 +395,7 @@ VICTORY_POINTS_7034:0 "마궤"
 VICTORY_POINTS_7069:0 "카사블랑카"
 VICTORY_POINTS_7071:0 "샤먼"
 VICTORY_POINTS_7072:0 "오스카"
+VICTORY_POINTS_7077:0 "카이르완"
 VICTORY_POINTS_7087:0 "시즈오카"
 VICTORY_POINTS_7097:0 "창샤"
 VICTORY_POINTS_7101:0 "창더"
@@ -438,7 +456,6 @@ VICTORY_POINTS_7669:0 "다윈"
 VICTORY_POINTS_7798:0 "멜버른"
 VICTORY_POINTS_7799:0 "울리아스타이"
 VICTORY_POINTS_7859:0 "캔버라"
-VICTORY_POINTS_7868:0 "니콜라옙스크 나 아무르"
 VICTORY_POINTS_7899:0 "선더베일"
 VICTORY_POINTS_7909:0 "치앙퉁" #Kengtung
 VICTORY_POINTS_7940:0 "거얼무"
@@ -448,6 +465,7 @@ VICTORY_POINTS_7960:0 "아부다비"
 VICTORY_POINTS_7965:0 "다리"
 VICTORY_POINTS_7980:0 "하라르"
 VICTORY_POINTS_7982:0 "벤다르 압바스"
+VICTORY_POINTS_7992:0 "포트 에띠노"
 VICTORY_POINTS_8010:0 "푸나카"
 VICTORY_POINTS_8011:0 "방갈로르"
 VICTORY_POINTS_8049:0 "옌안"
@@ -459,14 +477,16 @@ VICTORY_POINTS_8111:0 "엘아이운"
 VICTORY_POINTS_8113:0 "카라카스"
 VICTORY_POINTS_8117:0 "시라즈"
 VICTORY_POINTS_8122:0 "야무수크로"
+VICTORY_POINTS_8136:0 "오나제나"
+VICTORY_POINTS_8183:0 "탕가"
 VICTORY_POINTS_8193:0 "바르트스타드"
 VICTORY_POINTS_8214:0 "마피켕" #Gabrorone
 VICTORY_POINTS_8216:0 "투쿠만"
+VICTORY_POINTS_8228:0 "프리맨틀"
 VICTORY_POINTS_8245:0 "로렌소마르케스"
 VICTORY_POINTS_8248:0 "루안다"
 VICTORY_POINTS_8252:0 "과야킬"
 VICTORY_POINTS_9108:0 "룰레오"
-VICTORY_POINTS_9152:0 "엔자메나"
 VICTORY_POINTS_9206:0 "비푸리"
 VICTORY_POINTS_9221:0 "도르파트"
 VICTORY_POINTS_9262:0 "리바우"
@@ -502,12 +522,12 @@ VICTORY_POINTS_9606:0 "티미쇼아라"
 VICTORY_POINTS_9613:0 "우디네"
 VICTORY_POINTS_9617:0 "부쿠레슈티"
 VICTORY_POINTS_9620:0 "베른"
+VICTORY_POINTS_9628:0 "블라디캅카스"
 VICTORY_POINTS_9627:0 "라이바하"
 VICTORY_POINTS_9635:0 "콘스탄차"
 VICTORY_POINTS_9642:0 "브장송"
 VICTORY_POINTS_9660:0 "부다페스트"
 VICTORY_POINTS_9671:0 "샌 프란시스코"
-VICTORY_POINTS_9679:0 "그라즈"
 VICTORY_POINTS_9713:0 "새크라멘토"
 VICTORY_POINTS_9716:0 "이아시"
 VICTORY_POINTS_9737:0 "보르도"
@@ -521,6 +541,7 @@ VICTORY_POINTS_9817:0 "포르토"
 VICTORY_POINTS_9832:0 "프로비던스"
 VICTORY_POINTS_9833:0 "콘스탄티녜"
 VICTORY_POINTS_9843:0 "베이징"
+VICTORY_POINTS_9873:0 "청두"
 VICTORY_POINTS_9893:0 "안텝"
 VICTORY_POINTS_9898:0 "몽펠리에"
 VICTORY_POINTS_9904:0 "로마"
@@ -535,6 +556,7 @@ VICTORY_POINTS_9958:0 "즈엉저우"
 VICTORY_POINTS_9962:0 "냔자"
 VICTORY_POINTS_9974:0 "닝보"
 VICTORY_POINTS_9975:0 "아마다바드"
+VICTORY_POINTS_9976:0 "바트나"
 VICTORY_POINTS_9979:0 "말라가"
 VICTORY_POINTS_9990:0 "레조디칼라브리아"
 VICTORY_POINTS_9991:0 "치타공"
@@ -565,6 +587,7 @@ VICTORY_POINTS_10297:0 "쿠알라룸푸르"
 VICTORY_POINTS_10309:0 "다낭"
 VICTORY_POINTS_10330:0 "사야불리"
 VICTORY_POINTS_10337:0 "휴스턴"
+VICTORY_POINTS_10353:0 "아크메쳇"
 VICTORY_POINTS_10362:0 "몬테비데오"
 VICTORY_POINTS_10367:0 "애투 섬"
 VICTORY_POINTS_10370:0 "스프링필드"
@@ -578,15 +601,19 @@ VICTORY_POINTS_10438:0 "나콘라차시마"
 VICTORY_POINTS_10444:0 "삿포로"
 VICTORY_POINTS_10447:0 "포르투 알레그레"
 VICTORY_POINTS_10513:0 "상파울루"
+VICTORY_POINTS_10584:0 "우스트카메노고르스크"
 VICTORY_POINTS_10611:0 "리자이나"
 VICTORY_POINTS_10627:0 "헴벨디르"
 VICTORY_POINTS_10641:0 "야쿠츠크"
+VICTORY_POINTS_10668:0 "킴벌리"
 VICTORY_POINTS_10671:0 "사마르칸트"
 VICTORY_POINTS_10696:0 "옴스크"
 VICTORY_POINTS_10717:0 "캔자스시티"
+VICTORY_POINTS_10731:0 "콜럼-베샤르"
 VICTORY_POINTS_10737:0 "카불"
 VICTORY_POINTS_10747:0 "보고타"
 VICTORY_POINTS_10760:0 "무스카트"
+VICTORY_POINTS_10762:0 "산 피드로"
 VICTORY_POINTS_10772:0 "루디아나"
 VICTORY_POINTS_10803:0 "아비장"
 VICTORY_POINTS_10831:0 "칼라바르"
@@ -617,6 +644,7 @@ VICTORY_POINTS_11253:0 "노리치"
 VICTORY_POINTS_11293:0 "더블린"
 VICTORY_POINTS_11297:0 "헐"
 VICTORY_POINTS_11349:0 "르제프"
+VICTORY_POINTS_11366:0 "플렌스부르크"
 VICTORY_POINTS_11370:0 "민스크"
 VICTORY_POINTS_11375:0 "니즈니노보그라드"
 VICTORY_POINTS_11380:0 "노르셰핑"
@@ -631,12 +659,14 @@ VICTORY_POINTS_11483:0 "릴"
 VICTORY_POINTS_11506:0 "파리"
 VICTORY_POINTS_11516:0 "난치히"
 VICTORY_POINTS_11519:0 "리에주"
+VICTORY_POINTS_11537:0 "우랄스크"
 VICTORY_POINTS_11542:0 "프라하"
 VICTORY_POINTS_11544:0 "뉘른베르크"
 VICTORY_POINTS_11548:0 "칼레"
 VICTORY_POINTS_11561:0 "크리비리흐"
 VICTORY_POINTS_11562:0 "마스트리흐트"
 VICTORY_POINTS_11563:0 "루앙"
+VICTORY_POINTS_11564:0 "리예카"
 VICTORY_POINTS_11581:0 "자그레브"
 VICTORY_POINTS_11584:0 "베네치아"
 VICTORY_POINTS_11586:0 "베오그라드"
@@ -661,8 +691,10 @@ VICTORY_POINTS_11837:0 "타란토"
 VICTORY_POINTS_11846:0 "안치오"
 VICTORY_POINTS_11853:0 "에르주룸"
 VICTORY_POINTS_11881:0 "삼순"
+VICTORY_POINTS_11886:0 "산하이관"
 VICTORY_POINTS_11899:0 "사라예보"
 VICTORY_POINTS_11913:0 "난징"
+VICTORY_POINTS_11921:0 "스팍스"
 VICTORY_POINTS_11929:0 "다카"
 VICTORY_POINTS_11932:0 "나하"
 VICTORY_POINTS_11936:0 "타인호아"
@@ -670,6 +702,7 @@ VICTORY_POINTS_11954:0 "벵가지"
 VICTORY_POINTS_11969:0 "튀니스"
 VICTORY_POINTS_12001:0 "아르타"
 VICTORY_POINTS_12003:0 "발레타" #Malta
+VICTORY_POINTS_12051:0 "콩스탕틴"
 VICTORY_POINTS_12068:0 "타카오" #Gaoxiong/KaohsiungTakao/Takow
 VICTORY_POINTS_12080:0 "인도리"
 VICTORY_POINTS_12090:0 "시트웨"
@@ -715,6 +748,7 @@ VICTORY_POINTS_12489:0 "리틀록"
 VICTORY_POINTS_12501:0 "내슈빌"
 VICTORY_POINTS_12505:0 "세인트존스"
 VICTORY_POINTS_12518:0 "오호츠크"
+VICTORY_POINTS_12559:0 "니콜라옙스크나아무르"
 VICTORY_POINTS_12583:0 "비슈케크"
 VICTORY_POINTS_12586:0 "오마하"
 VICTORY_POINTS_12589:0 "케이프타운"
@@ -725,6 +759,7 @@ VICTORY_POINTS_12732:0 "란저우"
 VICTORY_POINTS_12735:0 "버밍험"
 VICTORY_POINTS_12738:0 "마나과"
 VICTORY_POINTS_12747:0 "볼라마"
+VICTORY_POINTS_12751:0 "바마코"
 VICTORY_POINTS_12758:0 "메디나"
 VICTORY_POINTS_12763:0 "페샤와르"
 VICTORY_POINTS_12766:0 "아스마라"
@@ -765,3 +800,8 @@ VICTORY_POINTS_13207:0 "테구시갈파"
 VICTORY_POINTS_13543:0 "페낭" #Penang
 VICTORY_POINTS_13544:0 "위트레흐트"
 VICTORY_POINTS_13551:0 "잔지바르스타드"
+VICTORY_POINTS_13575:0 "그라츠"
+VICTORY_POINTS_13601:0 "누크"
+VICTORY_POINTS_13604:0 "몬로비아"
+VICTORY_POINTS_13641:0 "은고마"
+VICTORY_POINTS_13648:0 "몽구"
