12월 업데이트

--- a/Kaiserreich Korean Translation/localisation/KR_War_and_Peace_in_China_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_War_and_Peace_in_China_l_english.yml
@@ -1,4 +1,4 @@
-﻿l_english:
+l_english:
 
 ### Opinion Modifiers ###
 GER_send_mat_QIE:0 "Germany send equipment to Us"
@@ -154,7 +154,7 @@ warpeacechina.27.d:0 "The Qing Empire is falling to its enemies, we must not let
 warpeacechina.27.a:0 "Move the Legion into the city and surrounding area!"
 warpeacechina.27.b:0 "To take the city would be the end of the Qing"
 warpeacechina.28.t:0 "The AOG has taken border regions region!"
-warpeacechina.28.d:0 "The treacherous Germans believe that we are now doomed to fail in our war against the aggressors, and have begun to seize our southern industrial zones in and around Nanjing in order to ‘protect' them. This insult cannot go unanswered, yet can we really afford a another front?"
+warpeacechina.28.d:0 "The treacherous Germans believe that we are now doomed to fail in our war against the aggressors, and have begun to seize our southern industrial zones in and around Nanjing in order to 'protect' them. This insult cannot go unanswered, yet can we really afford a another front?"
 warpeacechina.28.a:0 "Leave them for now; their time will come"
 warpeacechina.28.b:0 "The Germans must be punished! Their land is rightfully ours; mobilise!"
 warpeacechina.29.t:0 "The Qing have fallen"
