12월 업데이트

--- a/Kaiserreich Korean Translation/localisation/KR_World_Tension_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_World_Tension_l_english.yml
@@ -7,6 +7,7 @@ second_weltkrieg_threat:0 "제 2차 세계 대전 발발"
 rise_mongol_empire_threat:0 "몽골 제국의 발흥"
 fourth_balkan_war_threat:0 "제 4차 발칸 전쟁 발발"
 mitteleuropa_revolt_threat:0 "중앙유럽공동체 반란"
+fagressive_expansion:0 "일본이 독일을 위협함"
 
 worldtension.1.t:0 "세계 긴장도 상승!"
 worldtension.1.d:0 "제 2차 세계 대전이 발발하며 세계의 안정도가 하락했습니다. 좋은 의도로나, 나쁜 의도로나 각국 지도자들은 이미 자국의 무장을 실시했습니다. 우리의 잘못으로 일어난 것인지는 신경쓰지 않을 것입니다. 저들은 그저 전쟁을 대비할 뿐입니다."
