--- a/Kaiserreich Korean Translation/localisation/core_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/core_l_english.yml
@@ -45,6 +45,7 @@ l_english:
  #LOADING_HISTORY:0 "역사 불러오는 중"
  NOT_SELECT:0 "국가 선택되지 않음"
  April:0 "4월"
+ May:0 "5월"
  August:0 "8월"
  December:0 "12월"
  February:0 "2월"
@@ -279,7 +280,7 @@ l_english:
  MENU_BAR_SAVE_PLAY:0 "저장 & 플레이"
  MENU_BAR_IRONMAN_SAVE:0 "저장된 철인모드 게임"
  MENU_BAR_IRONMAN_PLAIN:0 "철인"
- MENU_HOMEPAGE:0 "하츠 오브 아이언 IV 홈페이지"
+ MENU_HOMEPAGE:0 "카이저라이히 위키"
  MENU_FORUM:0 "카이저라이히 포럼"
  MENU_FACEBOOK:0 "하츠 오브 아이언 IV 페이스북"
  MENU_TWITTER:0 "카이저 라이히 트위터"
@@ -489,6 +490,7 @@ l_english:
  REASON_LAND_COMBAT:0 "대공포에 의해 격추: $SUM|0H$"
  REASON_AIR_COMBAT:0 "공중전에서 격추: $SUM|0H$"
  REASON_ACCIDENT:0 "사고로 손실: $SUM|0H$"
+ REASON_BOMBED:0 "폭격당함: $SUM|0H$"
  AIRVIEW_DETAILS_CHANNEL_1:1 "폭격 당한 우리 건물: $VAL|R1$"
  AIRVIEW_DETAILS_CHANNEL_2:1 "폭격 당한 우리 부대: $VAL|R1$"
  AIRVIEW_DETAILS_CHANNEL_3:1 "폭격 당한 우리 함선: $VAL|R1$"
