--- a/Kaiserreich Korean Translation/localisation/KR_Countries_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Countries_l_english.yml
@@ -3681,10 +3681,10 @@ LEC_social_conservative_ADJ:0 "공사관"
 LEC_social_conservative_DEF:0 "공사관 도시"
 LEC_authoritarian_democrat:0 "도시 제국"
 LEC_authoritarian_democrat_ADJ:0 "공사관"
-LEC_authoritarian_democrat_DEF:0 도시 제국"
-LEC_paternal_autocrat:0 "삼합"
-LEC_paternal_autocrat_ADJ:0 "Triad"
-LEC_paternal_autocrat_DEF:0 "삼합"
+LEC_authoritarian_democrat_DEF:0 "도시 제국"
+LEC_paternal_autocrat:0 "삼합회"
+LEC_paternal_autocrat_ADJ:0 "삼합회"
+LEC_paternal_autocrat_DEF:0 "삼합회"
 LEC_national_populist:0 "도시 제국"
 LEC_national_populist_ADJ:0 "공사관"
 LEC_national_populist_DEF:0 "도시 제국"
@@ -6852,34 +6852,34 @@ TRK_national_populist_ADJ:0 "투르키스탄"
 TRK_national_populist_DEF:0 "투르크 칸국"
 
 TRM_totalist:0 "트란스아무르 연합"
-TRM_totalist_ADJ:0 "Transamurian"
+TRM_totalist_ADJ:0 "트란스아무르"
 TRM_totalist_DEF:0 "트란스아무르 연합"
 TRM_syndicalist:0 "트란스아무르 사회주의 공화국"
-TRM_syndicalist_ADJ:0 "Transamurian"
+TRM_syndicalist_ADJ:0 "트란스아무르"
 TRM_syndicalist_DEF:0 "트란스아무르 사회주의 공화국"
 TRM_radical_socialist:0 "트란스아무르 사회주의 공화국"
-TRM_radical_socialist_ADJ:0 "Transamurian"
+TRM_radical_socialist_ADJ:0 "트란스아무르"
 TRM_radical_socialist_DEF:0 "트란스아무르 사회주의 공화국"
 TRM_social_democrat:0 "트란스아무르 공화국"
-TRM_social_democrat_ADJ:0 "Transamurian"
+TRM_social_democrat_ADJ:0 "트란스아무르"
 TRM_social_democrat_DEF:0 "트란스아무르 공화국"
 TRM_social_liberal:0 "트란스아무르 공화국"
-TRM_social_liberal_ADJ:0 "Transamurian"
+TRM_social_liberal_ADJ:0 "트란스아무르"
 TRM_social_liberal_DEF:0 "트란스아무르 공화국"
 TRM_market_liberal:0 "트란스아무르 공화국"
-TRM_market_liberal_ADJ:0 "Transamurian"
+TRM_market_liberal_ADJ:0 "트란스아무르"
 TRM_market_liberal_DEF:0 "트란스아무르 공화국"
 TRM_social_conservative:0 "트란스아무르 공화국"
-TRM_social_conservative_ADJ:0 "Transamurian Republic"
+TRM_social_conservative_ADJ:0 "트란스아무르 공화국"
 TRM_social_conservative_DEF:0 "트란스아무르"
 TRM_authoritarian_democrat:0 "트란스아무르"
-TRM_authoritarian_democrat_ADJ:0 "Transamurian"
+TRM_authoritarian_democrat_ADJ:0 "트란스아무르"
 TRM_authoritarian_democrat_DEF:0 "트란스아무르"
 TRM_paternal_autocrat:0 "트란스아무르"
-TRM_paternal_autocrat_ADJ:0 "Transamurian"
+TRM_paternal_autocrat_ADJ:0 "트란스아무르"
 TRM_paternal_autocrat_DEF:0 "트란스아무르"
 TRM_national_populist:0 "트란스아무르"
-TRM_national_populist_ADJ:0 "Transamurian"
+TRM_national_populist_ADJ:0 "트란스아무르"
 TRM_national_populist_DEF:0 "트란스아무르"
 
 TRS_totalist:0 "트란실바니아 사회주의공화국"
@@ -7069,34 +7069,34 @@ UGA_national_populist_ADJ:0 "부간다"
 UGA_national_populist_DEF:0 "부간다"
 
 UKR_totalist:0 "우크라이나 왕국"
-UKR_totalist_ADJ:0 "Ukrainian"
+UKR_totalist_ADJ:0 "우크라이나"
 UKR_totalist_DEF:0 "우크라이나 왕국"
 UKR_syndicalist:0 "우크라이나 왕국"
-UKR_syndicalist_ADJ:0 "Ukrainian"
+UKR_syndicalist_ADJ:0 "우크라이나"
 UKR_syndicalist_DEF:0 "우크라이나 왕국"
 UKR_radical_socialist:0 "우크라이나 왕국"
-UKR_radical_socialist_ADJ:0 "Ukrainian"
+UKR_radical_socialist_ADJ:0 "우크라이나"
 UKR_radical_socialist_DEF:0 "우크라이나 왕국"
 UKR_social_democrat:0 "우크라이나 왕국"
-UKR_social_democrat_ADJ:0 "Ukrainian"
+UKR_social_democrat_ADJ:0 "우크라이나"
 UKR_social_democrat_DEF:0 "우크라이나 왕국"
 UKR_social_liberal:0 "우크라이나 왕국"
-UKR_social_liberal_ADJ:0 "Ukrainian"
+UKR_social_liberal_ADJ:0 "우크라이나"
 UKR_social_liberal_DEF:0 "우크라이나 왕국"
 UKR_market_liberal:0 "우크라이나 왕국"
-UKR_market_liberal_ADJ:0 "Ukrainian"
+UKR_market_liberal_ADJ:0 "우크라이나"
 UKR_market_liberal_DEF:0 "우크라이나 왕국"
 UKR_social_conservative:0 "우크라이나 왕국"
-UKR_social_conservative_ADJ:0 "Ukrainian"
+UKR_social_conservative_ADJ:0 "우크라이나"
 UKR_social_conservative_DEF:0 "우크라이나 왕국"
 UKR_authoritarian_democrat:0 "우크라이나 왕국"
-UKR_authoritarian_democrat_ADJ:0 "Ukrainian"
+UKR_authoritarian_democrat_ADJ:0 "우크라이나"
 UKR_authoritarian_democrat_DEF:0 "우크라이나 왕국"
 UKR_paternal_autocrat:0 "우크라이나 왕국"
-UKR_paternal_autocrat_ADJ:0 "Ukrainian"
+UKR_paternal_autocrat_ADJ:0 "우크라이나"
 UKR_paternal_autocrat_DEF:0 "우크라이나 왕국"
 UKR_national_populist:0 "우크라이나 왕국"
-UKR_national_populist_ADJ:0 "Ukrainian"
+UKR_national_populist_ADJ:0 "우크라이나"
 UKR_national_populist_DEF:0 "우크라이나 왕국"
 
 ULS_totalist:0 "울스터 연방"
