--- a/Kaiserreich Korean Translation/localisation/KR_Alash_Autonomy_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Alash_Autonomy_l_english.yml
@@ -1,86 +1,86 @@
 l_english:
 
 ### Opinion Modifiers ###
-ALO_loyal_RUS:0 "Alash Autonomy Loyalty"
-ALO_independent_RUS:0 "Alash Autonomy declared Independence"
-ALO_indepence_RUS:0 "Alash Autonomy declared Independence"
-KAZ_TUR_DKB:0 "Elected Turkmen Head of Government"
-KAZ_TUR_RUS:0 "Elected Turkmen Head of Government"
-KAZ_TUR_TRK:0 "Elected Turkmen Head of Government"
-KAZ_RUS_DKB:0 "Elected Russian Head of Government"
-KAZ_RUS_RUS:0 "Elected Russian Head of Government"
-KAZ_RUS_TRK:0 "Elected Russian Head of Government"
-KAZ_COS_DKB:0 "Elected Cossack Head of Government"
-KAZ_COS_RUS:0 "Elected Cossack Head of Government"
-KAZ_COS_TRK:0 "Elected Cossack Head of Government"
-ALO_DKB_secede:0 "Encouraged Seceding"
-ALO_DKB_pledge:0 "The Cossacks Pledged to Defend the Cossack Communities"
-ALO_DKB_no_concern:0 "The Cossacks were not concerned"
-ALO_let_cossaks:0 "Let the Cossacks secede"
-ALO_TRK_liberate:0 "Liberated Islamic Brothers"
-ALO_TRK_defend:0 "Pledged to Defend Orda's Muslims"
-ALO_TRK_do_nothing:0 "Turkestan Maintained the Status Quo"
-ALO_RUS_encourage:0 "Encouraged Seceding"
-ALO_RUS_pledge:0 "Russia Pledged to defend the Russian Communities"
-ALO_RUS_war:0 "Russia Declared War on Us"
-ALO_RUS_nothing:0 "Russia Maintained the Status Quo"
-ALO_do_nothing_RUS:0 "Alash Cedes"
-ALO_RUS_alliance:0 "Alliance with Russia"
-ALO_RUS_decline_all:0 "Russia Refused our Alliance Offer"
-ALO_RUS_claim:0 "Russia Claimed our Territories"
-ALO_RUS_puppet:0 "They are our Masters"
-ALO_RUS_decline_ann:0 "No Interest in Us"
-ALO_RUS_tsar_russ:0 "It's Only the Tsar of Russia"
-ALO_RUS_tsar_gifts:0 "Russia Sent Gifts"
-ALO_RUS_colony:0 "We're converted in a Russian Colony"
-ALO_RUS_no_interest:0 "No Interest in Us"
-ALO_RUS_rule_directly:0 "They Want to Annex Us"
-ALO_RUS_material:0 "Russia Sent Material"
-ALO_RUS_war_TRK:0 "Russia Declared War on Alash Orda"
-ALO_RUS_no_risk:0 "They Remained Neutral"
-ALO_rel_TRK_RUS:0 "Alash Orda Liberated Turkestan"
-ALO_rel_TRK_DKB:0 "Alash Orda Liberated Turkestan"
-ALO_rel_pup_TRK:0 "Alash Orda Puppeted Turkestan"
-ALO_TRK_free:0 "Alash Orda Liberated Turkestan"
-ALO_TRK_free_others:0 "Alash Orda Liberated Turkestan"
-ALO_TRK_pupp:0 "Alash Orda Puppeted Turkestan"
-ALO_TRK_pupp_others:0 "Alash Orda Puppeted Turkestan"
-ALO_RUS_no_int:0 "No Interest in Us"
-ALO_ann_TRK:0 "Alash Annexed Turkestan"
+ALO_loyal_RUS:0 "알라쉬 자치령의 충성"  
+ALO_independent_RUS:0 "알라쉬 자치령이 독립을 선언하다" 
+ALO_indepence_RUS:0 "알라쉬 자치령이 독립을 선언하다"
+KAZ_TUR_DKB:0 "튀르크인 정부 수반이 뽑히다"
+KAZ_TUR_RUS:0 "튀르크인 정부 수반이 뽑히다"
+KAZ_TUR_TRK:0 "튀르크인 정부 수반이 뽑히다"
+KAZ_RUS_DKB:0 "러시아인 정부 수반이 뽑히다"
+KAZ_RUS_RUS:0 "러시아인 정부 수반이 뽑히다"
+KAZ_RUS_TRK:0 "러시아인 정부 수반이 뽑히다"
+KAZ_COS_DKB:0 "코사크인 정부 수반이 뽑히다"
+KAZ_COS_RUS:0 "코사크인 정부 수반이 뽑히다"
+KAZ_COS_TRK:0 "코사크인 정부 수반이 뽑히다"
+ALO_DKB_secede:0 "분리독립이 요구되다"
+ALO_DKB_pledge:0 "코사크인들은 코사크 사회를 보호하는 것을 맹세한다"
+ALO_DKB_no_concern:0 "코사크인들은 걱정거리가 되지 않는다"
+ALO_let_cossaks:0 "코사크인들이 독립하도록 하자"
+ALO_TRK_liberate:0 "해방된 이슬람 동지들"
+ALO_TRK_defend:0 "오르다의 이슬람교도들을 보호하는것을 맹세하자"
+ALO_TRK_do_nothing:0 "튀르키스탄은 현 상태를 유지한다"
+ALO_RUS_encourage:0 "분리독립이 요구되다"
+ALO_RUS_pledge:0 "러시아인들은 러시아 사회를 보호하는 것을 맹세한다"
+ALO_RUS_war:0 "러시아가 우리에게 전쟁을 선포하다"
+ALO_RUS_nothing:0 "러시아는 현 상태를 유지한다"
+ALO_do_nothing_RUS:0 "알라쉬 독립"
+ALO_RUS_alliance:0 "러시아와의 동맹"
+ALO_RUS_decline_all:0 "러시아가 우리의 동맹 요청을 거절하다"
+ALO_RUS_claim:0 "러시아가 우리의 영토를 요구하다"
+ALO_RUS_puppet:0 "그들은 우리의 주인이다"
+ALO_RUS_decline_ann:0 "우리에게 관심이 없다"
+ALO_RUS_tsar_russ:0 "단지 러시아의 차르일 뿐이다"
+ALO_RUS_tsar_gifts:0 "러시아가 선물을 보내다"
+ALO_RUS_colony:0 "러시아의 식민지로 전락하다"
+ALO_RUS_no_interest:0 "우리에게 관심이 없다"
+ALO_RUS_rule_directly:0 "우리를 합병하기를 원하다"
+ALO_RUS_material:0 "러시아에서 물자를 보내다"
+ALO_RUS_war_TRK:0 "러시아가 알라쉬 오르다에 전쟁을 선언하다"
+ALO_RUS_no_risk:0 "그들은 중립을 유지한다"
+ALO_rel_TRK_RUS:0 "알라쉬 오르다가 튀르키스탄을 해방시키다"
+ALO_rel_TRK_DKB:0 "알라쉬 오르다가 튀르키스탄을 해방시키다"
+ALO_rel_pup_TRK:0 "알라쉬 오르다가 튀르키스탄을 종속국으로 만들다"
+ALO_TRK_free:0 "알라쉬 오르다가 튀르키스탄을 해방시키다"
+ALO_TRK_free_others:0 "알라쉬 오르다가 튀르키스탄을 해방시키다"
+ALO_TRK_pupp:0 "알라쉬 오르다가 튀르키스탄을 종속국으로 만들다"
+ALO_TRK_pupp_others:0 "알라쉬 오르다가 튀르키스탄을 종속국으로 만들다"
+ALO_RUS_no_int:0 "우리에게 관심이 없다"
+ALO_ann_TRK:0 "알라쉬가 튀르키스탄을 합병하다"
 
 ### Events ###
-alash.1.t:0 "Independence for Alash autonomy?"
-alash.1.d:0 "Our country, despite nominally being part of Russia with autonomous status has been de facto independent from the signing of the Minsk treaty in 1920. Despite a Russian attempt in 1925 to fully integrate us into Russia while repelling an invasion from Turkestan, our status remained unchanged thanks to Admiral Kolchak's coup d'etat attempt. Now with Russia engulfed in chaos, the time has come to throw off the chains of Russian oppression and end the farce of Alash-Orda being part of Russia !"
-alash.1.a:0 "No, we must remain loyal to Russia"
-alash.1.b:0 "Declare full independence from Russia"
+alash.1.t:0 "알라쉬 자치정부에 대한 독립?"
+alash.1.d:0 "우리의 국가는,비록 자치령의 형태로 러시아에 속해 있으나, 1920년의 민스크 조약 이후로 사실상의 독립을 유지하고 있다. 비록 1925년 튀르키스탄의 침공을 막아내는 동안 러시아가 우리를 합병하려는 시도를 하였으나, 고맙게도 콜차크 제독의 쿠데타 시도로 인해 우리의 국가의 자주권은 변하지 않았다. 이제 러시아가 혼돈에 빠져 허우적거리고 있으니, 이제 러시아의 억압의 사슬을 벗어 던지고, 알라쉬 오르다가 러시아의 일부분이라는 어처구니 없는 상황을 끝낼 때가 왔다! "
+alash.1.a:0 "아니다, 우리는 러시아에 계속 충성해야 한다"
+alash.1.b:0 "러시아에 대한 완전한 독립을 선포한다"
 
-alash.2.t:0 "Alash autonomous region declares independence!"
-alash.2.d:0 "Terrible news ! Our autonomous region of Alash-Orda has decided to use the political chaos in Russia following the assassination of Kerensky to sever almost all ties with Russia and declare independence. While many hotheads in the General Staff are demanding immediate action, ongoing chaos prevents us from responding to this treachery. It seems that we must let Alash-Orda be. For now..."
-alash.2.a:0 "There is nothing we can do..."
+alash.2.t:0 "알라쉬 자치 지역이 독립을 선언하다!"
+alash.2.d:0 "끔찍한 뉴스다! 우리의 알라쉬-오르다 자치 지역이 케렌스키의 암살과 이어진 러시아의 정치적 혼란을 활용해 거의 모든 러시아와의 연결을 끊고 독립을 선언했다. 사령부 내에 있는 많은 다혈질들은 조속한 행동을 요구하고 있지만, 진행되는 혼란은 우리가 이 배반에 대해 대응하는 것을 막고 있다. 알라쉬-오르다가 하고 싶은 대로 방치해야 해야만 할 것으로 보인다. 지금은 말이다…"
+alash.2.a:0 "우리가 할 수 있는 것이 없다 ..."
 
-alash.3.t:0 "The Peoples of Alash Orda"
-alash.3.d:0 "Our population is divided into three separate communities, and if it is to remain stable, it is necessary for our government to favour one of these groups above the others. Make this decision carefully, as it may lead to international complications."
-alash.3.a:0 "The Kazakhs and Kyrgyz people: they make up the majority of our population"
-alash.3.b:0 "The ethnic Russians: they control the economy"
-alash.3.c:0 "Our security depends upon the Cossacks"
+alash.3.t:0 "알라쉬 오르다의 국민들"
+alash.3.d:0 "우리의 국민들은 세가지 독립된 사회로 구성 되어있고, 국가가 안정적으로 유지되기 위해서는 이 사회들 중 한 사회를 다른 사회들보다 우대하는 것이 필요하다. 국제적인 복잡함을 유발할 수 있기 때문에, 이 결정을 신중히 내려야 한다."
+alash.3.a:0 "카자흐인와 키르기즈인들 : 이들은 우리 인구의 다수를 차지하고 있다"
+alash.3.b:0 "소수의 러시아인들 : 이들이 경제를 붙잡고 있다"
+alash.3.c:0 "우리의 안보는 코사크인들에게 달려 있다"
 
-alash.4.t:0 "The Alash Orda's Cossacks are oppressed!"
-alash.4.d:0 "The leaders of the Kazakh Republic's Cossack communities have complained to us that they are oppressed under the government's ethnical policy."
-alash.4.a:0 "Encourage them to secede and join our Union"
-alash.4.b:0 "Pledge to defend the security of the Cossacks"
-alash.4.c:0 "Send them away: this is no concern of ours"
+alash.4.t:0 "알라쉬 오르다의 코사크인들이 핍박받고 있다!"
+alash.4.d:0 "카자흐 공화국의 코사크 사회 지도자가 우리에게 코사크 사회가 정부의 민족적 정책 아래 핍박 받는다고 호소를 하고 있다."
+alash.4.a:0 "분리 독립을 제안하고 우리의 연방에 가입시킨다"
+alash.4.b:0 "코사크인들의 안전을 지킬것을 약속한다"
+alash.4.c:0 "그들을 내쫓는다 : 그것은 우리의 걱정거리가 아니다"
 
-alash.5.t:0 "The Don-Kuban Union is stirring up separatism!"
-alash.5.d:0 "The leaders of our country's Cossack garrisons have been encouraged to secede and join the Don-Kuban Union, where they feel their interests will be better protected! What should we do ?"
-alash.5.a:0 "We shall fight all who threaten the unity of our state!"
-alash.5.b:0 "Let them go, but maintain links with the Cossack leaders"
-alash.5.c:0 "Let the Cossacks leave"
+alash.5.t:0 "돈-쿠반 연방이 분리주의를 고조시키고 있다!"
+alash.5.d:0 "우리 나라의 코사크 주둔군 지도자가 독립과 함께 돈-쿠반 연방에 합류하는 것이 코사크 사회의 이익이 더욱 더 보호될 것이라는 주장을 하고 있다! 우리는 어떻게 행동해야 하는가?"
+alash.5.a:0 "우리 나라의 통합을 방해하는 자들 모두와 싸우겠다!"
+alash.5.b:0 "그들을 보내지만, 코사크 지도자들과의 연결을 유지한다"
+alash.5.c:0 "코사크인들이 떠나도록 두어라"
 
-alash.6.t:0 "The Alash Orda's Kyrgyz people are oppressed!"
-alash.6.d:0 "The leaders of Alash Orda's Kyrgyz communities have complained to us that they are oppressed under the government's ethnical policy."
-alash.6.a:0 "We shall fight to liberate our Islamic brothers!"
-alash.6.b:0 "We pledge to defend the interests of Orda's Muslims"
-alash.6.c:0 "Do nothing"
+alash.6.t:0 "알라쉬 오르다의 키르기즈인들이 핍박받고 있다!"
+alash.6.d:0 "알라쉬 오르다의 키르기즈인 사회 지도자가 우리에게 키르기즈인이 정부의 민족적 정책 아래 핍박 받는다고 호소를 하고 있다"
+alash.6.a:0 "우리는 우리의 이슬람 동지들을 해방하기 위해 싸울것이다!"
+alash.6.b:0 "키르기즈인들의 이익을 지킬것을 약속한다"
+alash.6.c:0 "아무것도 하지 않는다"
 
 alash.7.t:0 "The Alash Orda's Russians are oppressed!"
 alash.7.d:0 "The leaders of Alash Orda's Russian community have complained to us that they are oppressed under the government's ethnical policy."
