--- a/Kaiserreich Korean Translation/localisation/KR_Germany_In_Exile_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Germany_In_Exile_l_english.yml
@@ -27,46 +27,46 @@ GEX_national_populist_party:0 "AV"
 GEX_national_populist_party_long:0 "Alldeutscher Verband"
 
 ### Focuses ###
-GEX_darkest_hour:0 "Our Darkest Hour"
-GEX_darkest_hour_desc:0 "Forced from our homeland and made to flee like rats from the Syndicalist Hordes. This is truly the darkest hour our nation has ever experienced."
-GEX_kili:0 "Der Schuss am Kilimandscharo"
-GEX_kili_desc:0 "When we fled our homeland we did not manage to bring much of our infrastructure or equipment. What we did manage to salvage was our vital nuclear research. We shall conduct a test at Kilimandscharo to help us maximise the potential of these weapons to help us to return us home."
-GEX_air:0 "Fünf Wochen in der Luft"
-GEX_air_desc:0 "Unsurprisingly our air force was all but lost in the flight to Africa. We must retrain and drill the former MAF air force to our imperial standards or else retaking the mainland will prove to be a near-impossibility."
-GEX_exiled_eco:0 "What Little We Have Left..."
-GEX_exiled_eco_desc:0 "What little we have left we need to maximise and use to its full capability. 110% production quotas and squeezing every drop of productivity out of our workforce will go a long way towards achieving this."
-GEX_exiled_mil:0 "... We Need To Make Great"
-GEX_exiled_mil_desc:0 "Old guns, new guns, it doesn't matter. If it can kill a Frenchman we will build it and use it as effectively as we are able. We have no other choice."
-GEX_exiled_eco2:0 "... We Need To Make More"
-GEX_exiled_eco2_desc:0 "Our previous initiatives have been successful in providing us with a greater industrial base, but it is simply not enough. We must expand our industries even further if we are to take back the Fatherland."
-GEX_exiled_infra:0 "... We Need To Bring Together"
-GEX_exiled_infra_desc:0 "Our African domain is vast and hard to traverse making it difficult to pool our limited resources together. We need to improve our infrastructure situation in order to amend this problem."
-GEX_exiled_total:0 "Waste Not, Want Not"
-GEX_exiled_total_desc:0 "While our industrial programs have borne fruit we are always in need of more production to help us reclaim the birthright. We shall order all factories and local officials to redouble their efforts."
-GEX_spirit_of_resistance:0 "The Spirit of Resistance"
-GEX_spirit_of_resistance_desc:0 "The Fatherland is lost. In this time of absolute crisis we must place our faith in Kaiser and Country. Already the people are uniting around the Lion of Afrika, Lettow-Vorbeck, and many are seeing the return of a Weltkrieg-style burgfriedenspolitik truce in party politics."
-GEX_afrikakorps:0 "The Afrikakorps"
-GEX_afrikakorps_desc:0 "Our forces are now a motley mix of Exiles and Askari, currently far too disparate in terms of both professionalism and culture to work together successfully. We must seek to re-train and re-drill our surviving forces to serve as one unified force. Our survival depends upon it."
-GEX_the_way_home:0 "Our Only Way Home"
-GEX_the_way_home_desc:0 "Attempting to restore and replenish the Kaiserliche Marine would go a long way in helping us return to Berlin. This is our only goal and all other objectives must be cast aside in pursuit of it."
-GEX_walking_over_water:0 "Walking Over Water"
-GEX_walking_over_water_desc:0 "We must travel long and far to return to the Fatherland, and as such we must plan and prepare accordingly. A determined effort to produce and requisition troop transports is an absolute must."
-GEX_old_enemies_new_allies:0 "Old Enemies, New allies"
-GEX_old_enemies_new_allies_desc:0 "We have been defeated by the Syndicalist bastards and yet the Entente still soldiers on. While it was the obviously their failures in Europe that led to this mess in the first place, many say that we should put aside our differences and join with the Entente to reclaim our homeland, as unbearable as such a path may be."
-GEX_our_continent:0 "Our Dominion"
-GEX_our_continent_desc:0 "Ever since the continent's fate was decided at the Berlin Conference in 1884 we have held certain affinity for it as part of our desire for a Place in the Sun. Now that we reside on the dark continent we shall make sure our ties to the land are borne out in practice, at both a national and local level."
-GEX_crush_france:0 "Crush France"
-GEX_crush_france_desc:0 "While there is a cruel irony in that we and the French have both been exiled from Europe, it is the only affinity that we share. We should crush them, seize their holdings and adapt their industries to better forge the way for our homecoming. There can be no mercy."
-GEX_afrikakorps2:0 "Museum Pieces"
-GEX_afrikakorps2_desc:0 "No longer can we let our old arms sit in glass cabinets to be ogled by gentlemen in their hunting lodges. Every musket and elephant gun we have must be thrust into the hands of those capable of bearing them. After all, they did help win us one Weltkrieg. They shall win us a second."
-GEX_afrikakorps3_1:0 "Rights For Service"
-GEX_afrikakorps3_1_desc:0 "We will grant our native Askaris further rights in return for their loyal service to the Vaterland in its time of despair. Hopefully this will encourage more to sign up."
-GEX_afrikakorps3_2:0 "No Compromises"
-GEX_afrikakorps3_2_desc:0 "Though there have been calls to throw our principles to the wind in order to sign up more Askaris, they should be ignored. We will not return to Berlin by any means necessary, and extending suffrage and protections to Afrikans is intolerable to any good German."
-GEX_reclaim_the_birthright:0 "Reclaim the Birthright"
-GEX_reclaim_the_birthright_desc:0 "The time has come to take back what is rightfully ours. No longer shall we huddle on the dark continent stewing in our inglorious defeat. We shall show the godless Syndicalists the full fury of the Kaiser!"
-GEX_business:0 "Just Good Business"
-GEX_business_desc:0 "Canada has been a useful ally in helping us to reclaim the homeland, and for this they have our respect. This does not however mean that they are no longer a threat to our Empire, and realpolitik comes before all other concerns. After all, it is only business."
+GEX_darkest_hour:0 "가장 암울한 시기"
+GEX_darkest_hour_desc:0 "우리의 국토에서 쫓겨나 생디칼리스트 떼거리에 쥐떼처럼 도망쳤다. 이는 참으로 우리 국가가 겪은 것 중 가장 암울한 시기이다."
+GEX_kili:0 "Der Schuss am Kilimandscharo(킬리만자로에서의 탄환)"
+GEX_kili_desc:0 "국토에서 패주할 때 우리는 많은 기반시설이나 장비들을 가지고 오지 못하였다. 우리가 겨우 가지고 나온 것은 핵심적인 핵 기술이다. 우리는 킬리만자로에서 실험을 진행하여 고향에 돌아가는 데 도움을 줄 병기의 잠재력을 극대화해야 한다."
+GEX_air:0 "Fünf Wochen in der Luft(하늘에서의 5주간)"
+GEX_air_desc:0 "놀랍지 않게도 우리의 공군력은 아프리카로의 비행동안 거의 다 소실되었다. 우리는 재훈련이 필요하고 이전의 MAF 공군을 우리 제국의 기준으로 훈련시켜야만 하며 그렇지 않다면 본토를 회복하는 것은 거의 불가능한 것으로 드러날 것이다."
+GEX_exiled_eco:0 "우리가 가진 것이 얼마나 약소한가..."
+GEX_exiled_eco_desc:0 "우리가 보유한 것이 적으므로 우리는 극대화하고 그것을 최대한의 효율성으로 활용해야 한다. 우리의 노동력에 대한 110%의 생산 쿼터와 효율성을 최대한 짜 내는 것이 최대화와 극대화의 달성이라는 긴 여정의 시작이 될 것이다."
+GEX_exiled_mil:0 "... 우리는 위대하게 이뤄내야 한다"
+GEX_exiled_mil_desc:0 "구식 총기, 신식 총기, 상관 없다. 만약 프랑스인들을 죽일 수 있다면 우리는 만들어내고 가능한 한 효율적으로 이용할 것이다. 우리는 선택권이 없다."
+GEX_exiled_eco2:0 "... 우리는 더 많이 만들어내야 한다"
+GEX_exiled_eco2_desc:0 "우리의 이전 계획은 더욱 거대한 산업 기지를 제공하는데 성공했지만, 아직 부족하다. 우리의 조국의 탈환을 위해서는 더욱 더 산업을 확장해야만 한다."
+GEX_exiled_infra:0 "... 우리는 모두를 모아야 한다"
+GEX_exiled_infra_desc:0 "우리 아프리카 영토의 광대함과 횡단하는 데의 어려움은 우리의 제한된 자원을 모으는 것을 어렵게 하고 있다. 우리는 기반시설에 현황에 대처함으로써 이 문제를 개선해야 한다."
+GEX_exiled_total:0 "낭비하지 않고, 요구하지도 않는다"
+GEX_exiled_total_desc:0 "우리의 산업 계획이 결실을 얻는 동안에도 지속적으로 우리의 생득권을 회복하기 위한 더욱 더 많은 생산이 요구되고 있다. 우리는 모든 공장과 지방 행정을 향해 그들의 노력을 배가하도록 명령해야 한다."
+GEX_spirit_of_resistance:0 "저항의 정신"
+GEX_spirit_of_resistance_desc:0 "조국을 잃어버렸다. 이 절대적인 위기의 때에서, 우리의 운명을 황제와 국가에 바쳐야 한다. 이미 국민들은 아프리카의 사자인 레토프 포르벡 장군을 중심으로 뭉쳤으며, 대다수의 사람들은 대전기의 burgfriedenspolitik(정당간의 정쟁 금지 정책)을 기대하고 있다."
+GEX_afrikakorps:0 "The Afrikakorps(아프리카 군단)"
+GEX_afrikakorps_desc:0 "우리의 군대는 이제 망명자들과 아스카리 간의 어색한 조합으로 구성되어 있으며, 전문성과 성공적으로 협동하기 위한 기본 문화 양측에서 너무나 이질적이다. 우리는 우리의 생존 전력들을 재교육하고 재훈련 시킴으로써 하나의 통합된 전력으로 복무하도록 해야 한다. 우리의 생존은 여기에 달려있다.  ."
+GEX_the_way_home:0 "고향으로 향하는 유일한 길"
+GEX_the_way_home_desc:0 "Kaiserliche Marine의 재건과 보충을 시도하는 것은 베를린으로의 귀환을 위해 오랜 시간을 들여야 하는 일이다. 이것은 우리의 유일한 목표이며 이를 추구하는 동안 다른 모든 목표들은 한편으로 미뤄 두어야 한다."
+GEX_walking_over_water:0 "물 위를 걸어서"
+GEX_walking_over_water_desc:0 "우리는 조국으로의 귀환을 위허 길고 먼 길을 여행해야 하고, 따라서 계획하고 적절히 준비해야만 한다. 단호한 생산 노력과 징발 병력 운송선은 필수적이다."
+GEX_old_enemies_new_allies:0 "과거의 적, 새로운 동맹"
+GEX_old_enemies_new_allies_desc:0 "우리는 생디칼리스트 개자식들에게 패배했지만 아직 협상국들은 위기를 대처해 나가고 있다. 비록 그들의 유럽에서의 실패가 이 난장판을 만든 첫번째 원인임이 분명하지만, 대다수들은 상호간의 차이점들을 한쪽에 치워 놓고 협상국에 합류함으로써 우리의 고향을 회복하는 것이 그나마 견딜 만 한 길이라 말하고 있다."
+GEX_our_continent:0 "제국의 지배권"
+GEX_our_continent_desc:0 "1884년 베를린 모임에서 이 대륙의 운명이 결정된 이후로 우리는 Place in the Sun(독일 제국의 제국주의 사상) 에 대한 강한 친밀감을 보유하고 있다. 이제 우리가 이 검은 대륙에 살고 있으므로 우리는 이 땅과의 연관성을 국가적으로, 그리고 지역적 양 쪽으로 실체화해야 한다."
+GEX_crush_france:0 "프랑스를 무너뜨리다"
+GEX_crush_france_desc:0 "우리와 프랑스 모두 유럽에서 도망쳐 나왔다는 잔혹한 아이러니가 있음에도 불구하고, 그것은 우리가 공유하는 유일한 공통점일 뿐이다. 우리는 그들을 무너뜨리고, 그들의 시설을 확보하고 그들의 산업을 활용해 우리의 더 나은 귀향의 길을 구축해야 한다. 자비는 없을 것 이다. "
+GEX_afrikakorps2:0 "박물관 예술품"
+GEX_afrikakorps2_desc:0 "더 이상 구식 화기들을 사냥 오두막 속 유리 캐비닛 속에서 귀족분들을 유혹하도록 방치 할 수 없다. 우리가 보유한 모든 머스켓과 코끼리 사냥용 총들은 그것들을 감당할 수 있는 사람들의 손에 넘겨줘야 한다. 어쨌든 그것들은 우리가 1차 대전에서 승리하도록 도와주었다. 그들은 2차에도 우리가 이기도록 해 줄 것이다."
+GEX_afrikakorps3_1:0 "복무에 대한 권리"
+GEX_afrikakorps3_1_desc:0 "우리는 이 절망의 시간에 토착 아스카리들에게 그들의 충성스러운 조국에 대한 복무로 더 큰 권리를 허가할 것이다. 이것이 입대를 촉진하는 것을 기대해 보자."
+GEX_afrikakorps3_2:0 "타협은 없다"
+GEX_afrikakorps3_2_desc:0 "더 많은 아스카리들의 입대를 위해 우리의 원칙을 버리라는 요구가 있었지만, 그들은 무시되어야 한다. 우리는 모든 방법을 동원하면서까지 베를린에 귀환하지는 않을 것이며, 아프리카인들에 대한 참정권과 보호의 확대는 독일인들에게는 용납되지 않을 것이다."
+GEX_reclaim_the_birthright:0 "생득권의 탈환"
+GEX_reclaim_the_birthright_desc:0 "이제 마땅히 우리 것 이였던 것을 되찾을 시간이 되었다. 더 이상 불명예스러운 패배 아래서 속을 끓이며 어두운 대륙 아래서 머물러서는 안 된다. 우리는 신을 버린 생디칼리스트들에게 황제의 분노를 최대로 보여야 한다!"
+GEX_business:0 "그저 좋은 거래였을 뿐"
+GEX_business_desc:0 "캐나다는 우리가 조국을 되찾는데 도움을 주는 쓸모 있는 동맹이었고, 이를 통해 그들은 우리의 존경을 받았다. 하지만 이것이 그들이 우리 제국에 더 이상 위협이 되지 않는다는 뜻은 아니며, realpolitik이 모든 염려들보다 먼저 등장했다. 어쨌든, 그저 거래였을 뿐이다."
 
 ### Events ###
 
