명칭 관련 문제 수정

--- a/Kaiserreich Korean Translation/localisation/KR_Countries_Cosmetic_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Countries_Cosmetic_l_english.yml
@@ -1659,36 +1659,36 @@ CAM_GER_subject_authoritarian_democrat:0 "캄보디아 왕국"
 CAM_GER_subject_authoritarian_democrat_ADJ:0 "크메르"
 CAM_GER_subject_authoritarian_democrat_DEF:0 "캄보디아 왕국"
 
-INC_GER_subject_market_liberal:0 "자유주 인도차이나"
+INC_GER_subject_market_liberal:0 "인도차이나 자유주"
 INC_GER_subject_market_liberal_ADJ:0 "인도차이나"
-INC_GER_subject_market_liberal_DEF:0 "자유주 인도차이나"
-INC_GER_subject_national_populist:0 "자유주 인도차이나"
+INC_GER_subject_market_liberal_DEF:0 "인도차이나 자유주"
+INC_GER_subject_national_populist:0 "인도차이나 자유주"
 INC_GER_subject_national_populist_ADJ:0 "인도차이나"
-INC_GER_subject_national_populist_DEF:0 "자유주 인도차이나"
-INC_GER_subject_paternal_autocrat:0 "자유주 인도차이나"
+INC_GER_subject_national_populist_DEF:0 "인도차이나 자유주"
+INC_GER_subject_paternal_autocrat:0 "인도차이나 자유주"
 INC_GER_subject_paternal_autocrat_ADJ:0 "인도차이나"
-INC_GER_subject_paternal_autocrat_DEF:0 "자유주 인도차이나"
+INC_GER_subject_paternal_autocrat_DEF:0 "인도차이나 자유주"
 INC_GER_subject_radical_socialist:0 "인도차이나 연방"
 INC_GER_subject_radical_socialist_ADJ:0 "인도차이나"
 INC_GER_subject_radical_socialist_DEF:0 "인도차이나 연방"
-INC_GER_subject_social_conservative:0 "자유주 인도차이나"
+INC_GER_subject_social_conservative:0 "인도차이나 자유주"
 INC_GER_subject_social_conservative_ADJ:0 "인도차이나"
-INC_GER_subject_social_conservative_DEF:0 "자유주 인도차이나"
+INC_GER_subject_social_conservative_DEF:0 "인도차이나 자유주"
 INC_GER_subject_social_democrat:0 "인도차이나 연방"
 INC_GER_subject_social_democrat_ADJ:0 "인도차이나"
 INC_GER_subject_social_democrat_DEF:0 "인도차이나 연방"
-INC_GER_subject_social_liberal:0 "자유주 인도차이나"
+INC_GER_subject_social_liberal:0 "인도차이나 자유주"
 INC_GER_subject_social_liberal_ADJ:0 "인도차이나"
-INC_GER_subject_social_liberal_DEF:0 "자유주 인도차이나"
+INC_GER_subject_social_liberal_DEF:0 "인도차이나 자유주"
 INC_GER_subject_syndicalist:0 "인도차이나 연방"
 INC_GER_subject_syndicalist_ADJ:0 "인도차이나"
 INC_GER_subject_syndicalist_DEF:0 "인도차이나 연방"
 INC_GER_subject_totalist:0 "인도차이나 연방"
 INC_GER_subject_totalist_ADJ:0 "인도차이나"
 INC_GER_subject_totalist_DEF:0 "인도차이나 연방"
-INC_GER_subject_authoritarian_democrat:0 "자유주 인도차이나"
+INC_GER_subject_authoritarian_democrat:0 "인도차이나 자유주"
 INC_GER_subject_authoritarian_democrat_ADJ:0 "인도차이나"
-INC_GER_subject_authoritarian_democrat_DEF:0 "자유주 인도차이나"
+INC_GER_subject_authoritarian_democrat_DEF:0 "인도차이나 자유주"
 
 LAO_GER_subject_authoritarian_democrat:0 "라오스 왕국"
 LAO_GER_subject_authoritarian_democrat_ADJ:0 "라오스"
@@ -2294,8 +2294,8 @@ LYB_ITA_subject:0 "이탈리아령 북아프리카"
 LYB_ITA_subject_DEF:0 "이탈리아령 북아프리카"
 LYB_ITA_subject_ADJ:0 "리비아"
 
-TUN_subject:0 "$OVERLORDADJ$ 튀니스"
-TUN_subject_DEF:0 "$OVERLORDADJ$ 튀니스"
+TUN_subject:0 "$OVERLORDADJ$령 튀니지"
+TUN_subject_DEF:0 "$OVERLORDADJ$령 튀니지"
 
 MYS_PRF_subject:0 "마이소르 주"
 MYS_PRF_subject_DEF:0 "마이소르 주"
@@ -2305,25 +2305,25 @@ TRV_PRF_subject:0 "트레번코르-코친"
 TRV_PRF_subject_DEF:0 "트레번코르-코친"
 TRV_PRF_subject_ADJ:0 "트레번코르"
 
-MLY_GER_subject:0 "말라야 술탄국"
-MLY_GER_subject_DEF:0 "말라야 술탄국"
+MLY_GER_subject:0 "말라야 왕국"
+MLY_GER_subject_DEF:0 "말라야 왕국"
 MLY_GER_subject_ADJ:0 "말라야"
 
 SAR_GER_subject:0 "사라왁 왕국"
 SAR_GER_subject_DEF:0 "사라왁 왕국"
 SAR_GER_subject_ADJ:0 "사라왁"
 
-CEY_GER_subject:0 "자유주 실론"
+CEY_GER_subject:0 "실론 자유주"
 CEY_GER_subject_ADJ:0 "실론"
-CEY_GER_subject_DEF:0 "자유주 실론"
+CEY_GER_subject_DEF:0 "실론 자유주"
 
-MAG_GER_subject:0 "자유주 마다가스카르"
+MAG_GER_subject:0 "마다가스카르 자유주"
 MAG_GER_subject_ADJ:0 "마다가스카르"
-MAG_GER_subject_DEF:0 "자유주 마다가스카르"
+MAG_GER_subject_DEF:0 "마다가스카르 자유주"
 
-MOR_GER_subject:0 "자유주 마로코"
+MOR_GER_subject:0 "마로코 왕국"
 MOR_GER_subject_ADJ:0 "마로코"
-MOR_GER_subject_DEF:0 "자유주 마로코"
+MOR_GER_subject_DEF:0 "마로코 왕국"
 
 CRE_GRE_subject:0 "크레타 주"
 CRE_GER_subject_ADJ:0 "크레타"
@@ -2392,9 +2392,9 @@ YEM_GER_subject:0 "예멘"
 YEM_GER_subject_ADJ:0 "예멘"
 YEM_GER_subject_DEF:0 "예멘"
 
-SIE_GER_subject:0 "자유주 시에라리온"
+SIE_GER_subject:0 "시에라리온 자유주"
 SIE_GER_subject_ADJ:0 "시에라리온"
-SIE_GER_subject_DEF:0 "자유주 시에라리온"
+SIE_GER_subject_DEF:0 "시에라리온 자유주"
 
 CZE_czechoslavakia_authoritarian_democrat:0 "체코슬로바키아 왕국"
 CZE_czechoslavakia_authoritarian_democrat_ADJ:0 "체코슬로바키아"
