--- a/Kaiserreich Korean Translation/localisation/KR_Canada_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Canada_l_english.yml
@@ -250,7 +250,7 @@ CAN_RAD_AST_NEG:0 "유명한 캐나다의 강점"
 
 
 ### Leadership Descriptions ###
-POLITICS_GEORGE_DESC:0 "왕 겸 황제(The King-Emperor)는 자신의 칭호를 여전히 사용하면서, 1910 년에 태양이 지지않는 제국인 광대한 대영 제국을 26 년 동안 지배해 왔습니다, 그러나 지난 26년 동안의 비극으로는 왕 겸 황제는 그의 사촌과의 전쟁에서 진 것과 막내 아들 존의 죽음, 그리고 영국 왕실의 마지막 망명으로는 캐나다로 가게 되었고, 왕 겸 황제에 의해 개인적으로 "냉동 감옥"으로 불려졌습니다. 마침내, 태양이 대영 제국을 향해 진 것처럼 보였고, 절망감이 조지 왕의 한때 금욕적인 성격으로 가득 찼습니다. 1925 년 이래로 왕 겸 황제의 건강은 스트레스와 우울증의 혼합을 통해 꾸준히 악화되어 에드워드 왕자가 병든 왕으로부터 더 많은 임무를 맡게되었습니다."
+POLITICS_GEORGE_DESC:0 "왕 겸 황제(The King-Emperor)는 자신의 칭호를 여전히 사용하면서, 1910 년에 태양이 지지않는 제국인 광대한 대영 제국을 26 년 동안 지배해 왔습니다, 그러나 지난 26년 동안의 비극으로는 왕 겸 황제는 그의 사촌과의 전쟁에서 진 것과 막내 아들 존의 죽음, 그리고 영국 왕실의 마지막 망명으로는 캐나다로 가게 되었고, 왕 겸 황제에 의해 개인적으로 "냉동 감옥"으로 불려졌습니다. 마침내, 태양이 대영 제국을 향해 진 것처럼 보였고, 절망감이 조지 왕의 한때 금욕적인 성격으로 가득 찼습니다. 1925 년 이래로 왕 겸 황제의 건강은 스트레스와 우울증의 혼합을 통해 꾸준히 악화되어 에드워드 왕자가 병든 왕으로부터 더 많은 임무를 맡게되었습니다(원통하게도)."
 
 ### World Tension ###
 CAN_IRE_treaty_t:0 "캐나다-아일랜드 조약"
