--- a/Kaiserreich Korean Translation/localisation/KR_Canada_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Canada_l_english.yml
@@ -133,8 +133,8 @@ CAN_PRIVY:0 "국왕이 자유주의자를 지원하다."
 CAN_royalism:0 "국왕이 민주주의를 저버리다."
 KING_GEORGE_V_DEATH:0 "조지 5세가 사망하다."
 CAN_USA_PACT:0 "미합중국과의 조약"
-CAN_AUS_PACT:0 "미국 연방 정부와의 조약"
-CAN_CSA_PACT:0 "미국 연합 신디케이트와의 조약"
+CAN_AUS_PACT:0 "미주 연합과의 조약"
+CAN_CSA_PACT:0 "아메리카 노동 연맹과의 조약"
 entente_research_name:0 "제국 과학 학술 위원회."
 entente_research_desc:0 "제국 과학 학술 위원회는 대영제국과 협상국의 과학 협회입니다."
 SCHEME_1_BYPASS:0 "제 1호 방위계획이 만료되다."
