--- a/Kaiserreich Korean Translation/localisation/KR_Ottoman_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Ottoman_l_english.yml
@@ -821,19 +821,19 @@ ott.111.d:0 "오스만 관료주의에 악명 높게 널리 퍼진 부패는 오
 ott.111.a:0 "뇌물 방지 맹세를 다시 시작하라!"
 
 ott.112.t:0 "부정 부패 신고"
-ott.112.d:0 "오늘날 우리는 Yalova의 불법 토지 사용에 관한 매우 골치 아픈 보고를 받았다. 이 보고서에 따르면, 재무부의 몇몇 관료들은 Mukataa 농지 수입을 횡령하기 위해 Yalova의 지방 행정관들과 결탁하고 있다. 그러나 같은 지역의 또 다른 무리는 술탄의 조카들에게 속하는 왕실 재산을 불법적으로 임대하고 있다. 이 보고서는 두 무리 모두가 내무부에서 수상한 장부를 통해 보호 받고 있다고 주장하고 있다. 우리의 왕실 회계사에 따르면, 이 파렴치한 도둑 행위는 매년 수 백만의 제국마르크 도둑맞고 있다고 합니다! 이러한 주장들을 조사해야 할까요?"
+ott.112.d:0 "오늘날 우리는 얄로바의 불법 토지 사용에 관한 매우 골치 아픈 보고를 받았다. 이 보고서에 따르면, 재무부의 몇몇 관료들은 Mukataa 농지 수입을 횡령하기 위해 얄로바의 지방 행정관들과 결탁하고 있다. 그러나 같은 지역의 또 다른 무리는 술탄의 조카들에게 속하는 왕실 재산을 불법적으로 임대하고 있다. 이 보고서는 두 무리 모두가 내무부에서 수상한 장부를 통해 보호 받고 있다고 주장하고 있다. 우리의 왕실 회계사에 따르면, 이 파렴치한 도둑 행위는 매년 수 백만의 제국마르크 도둑맞고 있다고 합니다! 이러한 주장들을 조사해야 할까요?"
 ott.112.a:0 "이것에 대해 조치를 취하라!"
 ott.112.b:0 "그냥 내버려 둬, 이건 너무 위험해"
 
 ott.113.t:0 "경찰 서장이 살해되다!"
-ott.113.d1:0 "끔찍한 소식이다! Emniyet-i Umumiye의 대표 Muharrem Arif Paşa는 오늘 아침에 그의 집 밖에서 살해당했다! 술탄의 명령에 따라 Muharrem Arif Paşa는 횡령에 관한 '부패로의 조사'를 이끌고 있었다. 몇몇 목격자들은 출발하기 전에 표식없는 하얀 차에서 Muharrem Paşa에게 두 명의 암살자가 총격을 가하는 것을 보고했다고 보도했다. 그 암살 사건이 야로바 사건과 연관되어 있다는 것은 의심의 여지가 없으며, 하얀 자동차 수색은 이미 진행 중이다."
-ott.113.d2:0 "끔찍한 소식이다! Emniyet-i Umumiye의 대표 Muharrem Arif Paşa는 오늘 아침에 그의 집 밖에서 살해당했다! 의회의 명령에 따라 Muharrem Arif Paşa는 횡령에 관한 '부패로의 조사'를 이끌고 있었다. 몇몇 목격자들은 출발하기 전에 표식없는 하얀 차에서 Muharrem Paşa에게 두 명의 암살자가 총격을 가하는 것을 보고했다고 보도했다. 그 암살 사건이 야로바 사건과 연관되어 있다는 것은 의심의 여지가 없으며, 하얀 자동차 수색은 이미 진행 중이다."
+ott.113.d1:0 "끔찍한 소식이다! Emniyet-i Umumiye의 대표 Muharrem Arif Paşa는 오늘 아침에 그의 집 밖에서 살해당했다! 술탄의 명령에 따라 Muharrem Arif Paşa는 횡령에 관한 '부패로의 조사'를 이끌고 있었다. 몇몇 목격자들은 출발하기 전에 표식없는 하얀 차에서 Muharrem Paşa에게 두 명의 암살자가 총격을 가하는 것을 보고했다고 보도했다. 그 암살 사건이 얄로바 사건과 연관되어 있다는 것은 의심의 여지가 없으며, 하얀 자동차 수색은 이미 진행 중이다."
+ott.113.d2:0 "끔찍한 소식이다! Emniyet-i Umumiye의 대표 Muharrem Arif Paşa는 오늘 아침에 그의 집 밖에서 살해당했다! 의회의 명령에 따라 Muharrem Arif Paşa는 횡령에 관한 '부패로의 조사'를 이끌고 있었다. 몇몇 목격자들은 출발하기 전에 표식없는 하얀 차에서 Muharrem Paşa에게 두 명의 암살자가 총격을 가하는 것을 보고했다고 보도했다. 그 암살 사건이 얄로바 사건과 연관되어 있다는 것은 의심의 여지가 없으며, 하얀 자동차 수색은 이미 진행 중이다."
 ott.113.a:0 "우리는 이것의 진상을 규명할 것이다!"
 ott.113.b:0 "이것은 분명히 말벌의 둥지다. 수사를 끝내라."
 
 ott.114.t:0 "고위 관리들을 체포로 이끈다."
-ott.114.d1:0 "왕실 조사관들의 서류 더미에 이어, 우리 형사 조사관들은 왕실 세입자들이 어떻게 돈을 받았는지를 밝힐 수 있었다. 재무부 장관 8명, Yalova의 3 명의 행정관들, 내무부 차관등이 일련의 거래를 통해 자금을 훔친 것으로 밝혀졌다. 경찰은 체포할 준비가 되었지만, 그러한 고위 관료들을 체포하는 것은 다른 예기치 못한 합병증으로 이어질 수 있다. 체포할까요?"
-ott.114.d2:0 "왕실 조사관들의 서류 더미에 이어, 우리 경찰 조사관들은 왕실 세입자들이 어떻게 돈을 받았는지를 밝힐 수 있었다. 재무부 장관 8명, Yalova의 3 명의 행정관들, 내무부 차관등이 일련의 거래를 통해 자금을 훔친 것으로 밝혀졌다. 경찰은 체포할 준비가 되었지만, 그러한 고위 관료들을 체포하는 것은 다른 예기치 못한 합병증으로 이어질 수 있다. 체포할까요?"
+ott.114.d1:0 "왕실 조사관들의 서류 더미에 이어, 우리 형사 조사관들은 왕실 세입자들이 어떻게 돈을 받았는지를 밝힐 수 있었다. 재무부 장관 8명, 얄로바의 3 명의 행정관들, 내무부 차관등이 일련의 거래를 통해 자금을 훔친 것으로 밝혀졌다. 경찰은 체포할 준비가 되었지만, 그러한 고위 관료들을 체포하는 것은 다른 예기치 못한 합병증으로 이어질 수 있다. 체포할까요?"
+ott.114.d2:0 "왕실 조사관들의 서류 더미에 이어, 우리 경찰 조사관들은 왕실 세입자들이 어떻게 돈을 받았는지를 밝힐 수 있었다. 재무부 장관 8명, 얄로바의 3 명의 행정관들, 내무부 차관등이 일련의 거래를 통해 자금을 훔친 것으로 밝혀졌다. 경찰은 체포할 준비가 되었지만, 그러한 고위 관료들을 체포하는 것은 다른 예기치 못한 합병증으로 이어질 수 있다. 체포할까요?"
 ott.114.a:0 "그들을 재판에 데려와라!"
 ott.114.b:0 "범죄자들을 용서하고, 조사를 끝내라"
 
