--- a/Kaiserreich Korean Translation/localisation/KR_Vietnam_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Vietnam_l_english.yml
@@ -1,24 +1,24 @@
 ﻿l_english:
 
 ### Parties ###
-VIE_totalist_party:0 "Dan Cong san Viet Nam"
-VIE_totalist_party_long:0 "Dan Cong san Viet Nam (Syndicalist Party of Vietnam)"
-VIE_syndicalist_party:0 "Dan Cong san Viet Nam"
-VIE_syndicalist_party_long:0 "Dan Cong san Viet Nam (Syndicalist Party of Vietnam)"
-VIE_radical_socialist_party:0 "Dan Xa hoi Viet Nam"
-VIE_radical_socialist_party_long:0 "Dan Xa hoi Viet Nam (Socialist Party of Vietnam)"
-VIE_social_democrat_party:0 "Dang Dan chu Xa hoi"
-VIE_social_democrat_party_long:0 "Dang Dan chu Xa joi (Social Democratic Party)"
-VIE_social_liberal_party:0 "Dang Dan chu Viet Nam"
-VIE_social_liberal_party_long:0 "Dang Dan chu Viet Nam (Democratic Party of Vietnam)"
-VIE_market_liberal_party:0 "Dang Dan chu Viet Nam"
-VIE_market_liberal_party_long:0 "Dang Dan chu Viet Nam (Democratic Party of Vietnam)"
-VIE_social_conservative_party:0 "Phong trao Cach mang Quoc gia"
-VIE_social_conservative_party_long:0 "Phong trao Cach mang Quoc gia (National Revolutionary Movement)"
-VIE_authoritarian_democrat_party:0 "Dang Phuc hoi Viet Nam"
-VIE_authoritarian_democrat_party_long:0 "Dang Phuc hoi Viet Nam (Vietnamese Restoration Party)"
-VIE_paternal_autocrat_party:0 "Viet Nam Quoc Dan Dang"
-VIE_paternal_autocrat_party_long:0 "Viet Nam Quoc Dan Dang (Vietnamese Nationalist Party)"
-VIE_national_populist_party:0 "Can lao Nhan vi Cach Mang Dan"
-VIE_national_populist_party_long:0 "Can lao Nhan vi Cach Mang Dan (Personalist Labour Revolutionary Party)"
+VIE_totalist_party:0 "베트남 공산당"
+VIE_totalist_party_long:0 "베트남 공산당"
+VIE_syndicalist_party:0 "베트남 공산당"
+VIE_syndicalist_party_long:0 "베트남 공산당"
+VIE_radical_socialist_party:0 "베트남 사회당"
+VIE_radical_socialist_party_long:0 "베트남 사회당"
+VIE_social_democrat_party:0 "사회민주당"
+VIE_social_democrat_party_long:0 "사회민주당"
+VIE_social_liberal_party:0 "베트남 민주당"
+VIE_social_liberal_party_long:0 "베트남 민주당"
+VIE_market_liberal_party:0 "베트남 민주당"
+VIE_market_liberal_party_long:0 "베트남 민주당"
+VIE_social_conservative_party:0 "국가혁명풍조"
+VIE_social_conservative_party_long:0 "국가혁명풍조"
+VIE_authoritarian_democrat_party:0 "베트남 복회당"
+VIE_authoritarian_democrat_party_long:0 "베트남 복회당"
+VIE_paternal_autocrat_party:0 "베트남 국민당"
+VIE_paternal_autocrat_party_long:0 "베트남 국민당"
+VIE_national_populist_party:0 "혁명인위근로당"
+VIE_national_populist_party_long:0 "혁명인위근로당"
 
