누락 기호 수정

--- a/Kaiserreich Korean Translation/localisation/KR_USA_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_USA_l_english.yml
@@ -632,7 +632,7 @@ ustates.27.b:0 "찰스 커티스 (공화당)"
 ustates.27.c:0 "휴이 롱 (아메리카 우선당)"
 ustates.27.e:0 "잭 리드 (아메리카 노동 연맹)"
 
-ustates.28.t:0 노동 연맹이 대선 결과에 이의제기하다!"
+ustates.28.t:0 "노동 연맹이 대선 결과에 이의제기하다!"
 ustates.28.d:0 "The Syndicalist leadership of the Combined Syndicates of America have refused to accept the results of our free and fair election."
 ustates.28.a:0 "젠장할 리드!"
 
