--- a/Kaiserreich Korean Translation/localisation/KR_Germany_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Germany_l_english.yml
@@ -1210,15 +1210,13 @@ gerfor.66.a:0 "협상국에 가입한다."
 gerfor.66.b:0 "아니, 우리는 혼자 싸울 것이다!"
 
 gerfor.67.t:0 "독일이 대화를 원합니다!"
-gerfor.67.d:0 
-"독일은 생디칼리스트 찬탈자들에게 패배했습니다. 생디칼리스트가 유럽을 차지한 것은 독일의 잘못이지만, 현재 독일은 우리와 같은 입장입니다. 놀랍게도 독일은 오타와에 사절단을 보내 동맹을 요청했습니다. 어떤 조건을 달겠습니까?"
+gerfor.67.d:0 "독일은 생디칼리스트 찬탈자들에게 패배했습니다. 생디칼리스트가 유럽을 차지한 것은 독일의 잘못이지만, 현재 독일은 우리와 같은 입장입니다. 놀랍게도 독일은 오타와에 사절단을 보내 동맹을 요청했습니다. 어떤 조건을 달겠습니까?"
 gerfor.67.a:0 "Allow them into the Entente without concessions."
 gerfor.67.b:0 "Allow them into the Entente with concessions."
 gerfor.67.c:0 "We will regain our homeland without the German swines!"
 
 gerfor.68.t:0 "독일이 대화를 원합니다!"
-gerfor.68.d:0 
-"독일은 생디칼리스트 찬탈자들에게 패배했습니다. 생디칼리스트가 유럽을 차지한 것은 독일의 잘못이지만, 현재 독일은 우리와 같은 입장입니다. 놀랍게도 독일은 오타와에 사절단을 보내 동맹을 요청했고 캐나다는 수락했습니다. 우리는 독일에 동맹에 대한 대가로 무엇을 요구해야 할까요?"
+gerfor.68.d:0 "독일은 생디칼리스트 찬탈자들에게 패배했습니다. 생디칼리스트가 유럽을 차지한 것은 독일의 잘못이지만, 현재 독일은 우리와 같은 입장입니다. 놀랍게도 독일은 오타와에 사절단을 보내 동맹을 요청했고 캐나다는 수락했습니다. 우리는 독일에 동맹에 대한 대가로 무엇을 요구해야 할까요?"
 gerfor.68.a:0 "알자스-로렌을 요구한다!"
 gerfor.68.b:0 "알자스-로렌과 식민지 일부를 요구한다!"
 gerfor.68.c:0 "아무 것도 요구하지 않는다."
