--- a/Kaiserreich Korean Translation/localisation/KR_Loading_Tips_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Loading_Tips_l_english.yml
@@ -1,15 +1,15 @@
 l_english:
 LOADING_TIP_0:0 "In one word - we do not want to place anyone into the shadow, but we also claim our place in the sun.\n- German Foreign Minister Bernhard von Bülow, 1897"
 LOADING_TIP_1:0 "Despite the fact that we have no such fleet as we should have, we conquered for ourselves a place in the sun. It will be my task to see that this place in the sun shall remain our undisputed possession. \n- Kaiser Wilhelm II"
-LOADING_TIP_2:0 "My 'Share Our Wealth' program is the only defence this country's got against Syndicalism. \n- Huey Long"
-LOADING_TIP_3:0 "Socialism has to remain a terrifying and a majestic thing.\n - Benito Mussolini"
+LOADING_TIP_2:0 "나의 '부의 공유' 정책만이 유일하게 생디칼리즘으로 부터 국가를 보호 할 수 있는 방어수단입니다. \n- 휴이 롱"
+LOADING_TIP_3:0 "사회주의는 무시무시하고 장엄한 것으로 남아야합니다.\n - 베니토 무솔리니"
 LOADING_TIP_4:0 "Our aim is the creation in our country of a society of free and equal man, where no man will ever exploit another man. \n- Palmiro Togliatti"
-LOADING_TIP_5:0 "Together in Britain we have lit a flame that the ages shall not extinguish. \n- Oswald Mosley"
+LOADING_TIP_5:0 "우리는 영국에서 함께 불꽃이 꺼지지 않을 시대에 바람을 불었다.\n- 오스왈드 모즐리"
 LOADING_TIP_6:0 "I am not, and never have been, a man of the right. My position was on the left and is now in the centre of politics. \n- Oswald Mosley"
 LOADING_TIP_7:0 "To prevent a catastrophe the Tsar himself must be removed, by force if there is no other way. \n- Aleksandr Kerensky, 1917"
 LOADING_TIP_8:0 "The policy of the Bolsheviks is demagogic and criminal, in their exploitation of the popular discontent. \n- Aleksandr Kerensky, 1917"
 LOADING_TIP_9:0 "Without the Empire we should be tossed like a cork in the cross current of world politics. It is at once our sword and our shield. \n- Billy Hughes"
-LOADING_TIP_10:0 "Conscription if necessary, but not necessarily conscription. \n- William Lyon Mackenzie King"
+LOADING_TIP_10:0 "필요하다면 징병을 하겠지만, 반드시 징병 하는 것은 아닙니다.\n- 윌리엄 리옹 매켄지 킹"
 LOADING_TIP_11:0 "I look upon him as the greatest criminal known for having plunged the world into war. \n- King George V on his cousin, Kaiser Wilhelm II"
 LOADING_TIP_12:0 "After I am dead, the boy will ruin himself in twelve months. \n- attributed to George V of United Kingdom about his son Edward, Prince of Wales"
 LOADING_TIP_13:0 "I would like to see the word nationalisation banned from the socialist vocabulary. \n- Philip Snowden"
@@ -34,7 +34,7 @@ LOADING_TIP_31:0 "No bastard ever won a war by dying for his country. He won it 
 LOADING_TIP_32:0 "My measures will not be crippled by any bureaucracy. Here I don't have to worry about Justice; my mission is only to destroy and to exterminate; nothing more. \n- Hermann von Goering"
 LOADING_TIP_33:0 "The Russian people are suffering from economic fatigue and from disillusionment with the Allies! The world thinks the Russian Revolution is at an end. Do not be mistaken. The Russian Revolution is just beginning. \n- Aleksandr Kerensky"
 LOADING_TIP_34:0 "Our threat is from the insidious forces working from within which have already so drastically altered the character of our free institutions — those institutions we proudly called the American way of life.\n- Douglas MacArthur"
-LOADING_TIP_35:0 "France has no friends, only interests. \n- Charles de Gaulle"
+LOADING_TIP_35:0 "프랑스는 친구가 없다, 오직 이해관계 뿐이다. \n- 샤를 드골"
 LOADING_TIP_36:0 "Yes, it is Europe, from the Atlantic to the Urals, it is Europe, it is the whole of Europe, that will decide the fate of the world. \n- Charles de Gaulle"
 LOADING_TIP_37:0 "I'm reading the Military Campigns of the Kingdom of Wu. They didn't have any machine guns or airplanes then. \n- Wu Peifu"
 LOADING_TIP_38:0 "If you don't have ammunition, you still have bayonets. Fix bayonets! \n- Lieutenant Colonel Mustafa Kemal Bey"
@@ -78,7 +78,7 @@ LOADING_TIP_75:0 "All that we do, every action, should correspond to the highest
 LOADING_TIP_76:0 "Now the sword must decide. In the midst of peace we have been attacked. Germany united has never been conquered. We will advance with God by our side, as he was with our forefathers. \n- Kaiser Wilhelm II"
 LOADING_TIP_77:0 "This is not an age of dreams and fancies; it is an age of iron, in which an iron spirit and an iron will are needed by men to cut their path through to victory. \n- Oswald Mosley"
 LOADING_TIP_78:0 "We are on the verge of events, the like of which the world has not seen since centuries. Soon everything that constitutes our lives will strike the world as useless. A period of barbarism is about to begin and it will last for decades. \n- Pyotr Wrangel"
-LOADING_TIP_79:0 "One day, the Great Russian Republic will be much stronger, richer and freer than the old Tsarist Empire. But how much blood will be shed. \n- Boris Savinkov"
+LOADING_TIP_79:0 "언젠가, 위대한 러시아 공화국은 구 러시아 제국보다 더 강하고, 부유하고, 자유로워질 것이다. 다만 피를 얼마나 흘리냐에 달렸다. \n- 보리스 사빈코프"
 LOADING_TIP_80:0 "There is one certainty of the future of a people of the resources, intelligence and character of the people of the United States—that is, prosperity. \n- Herbert Hoover"
 LOADING_TIP_81:0 "I prefer a government run like hell by Filipinos to a government run like heaven by Americans. \n- Manuel L. Quezon"
 LOADING_TIP_82:0 "Ottoman Empire is the strongest state. For you are trying to cause its collapse from the outside, and we from the inside, but still it does not collapse. \n- Grand Vizier Fuad Pasha, to a Western ambassador"
@@ -96,7 +96,7 @@ LOADING_TIP_93:0 "Zhang Tianran, although born into the mortal world, is known b
 LOADING_TIP_94:0 "Life springs from death; and from the graves of patriot men and women spring living nations. \n- Patrick Pearse"
 LOADING_TIP_95:0 "All history is man's efforts to realise ideals. \n- Eamon de Valera"
 LOADING_TIP_96:0 "We owe much to Germany, and are grateful - but we owe much more to the courage, dedication and sacrifices made by Irish men and Irish women. \n- Michael Collins, October 1925"
-LOADING_TIP_97:0 "I gift to France my person to ease its misfortune. \n-Philippe Pétain"
+LOADING_TIP_97:0 "나의 불행을 덜어줄 사람에게 프랑스를 선물로 드리겠습니다. \n-필리프 페탱"
 LOADING_TIP_98:0 "What do you prefer, the one that wants to take your bread in the name of freedom or the one that wants to take your freedom to guarantee your bread? \n-Albert Camus"
 LOADING_TIP_99:0 "The history of democracy offers us a very remarkable combination of utopias and myths. \n-Georges Sorel"
 LOADING_TIP_100:0 "Wilhelm II, despite being a gruesome and mediocre sovereign led an organisation that created an amount of power never seen before by the mere notion of unity, heredity and tradition of leadership. \n-Charles Maurras"
