--- a/Kaiserreich Korean Translation/localisation/KR_Canada_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Canada_l_english.yml
@@ -210,8 +210,8 @@ CAN_supports_them:0 "미합중국을 지지하는 캐나다"
 CAN_support_vs_gua:0 " 미합중국을 지지하는 캐나다"
 CAN_GER_treaty_accept:0 "독일은 우리의 조약을 받아들였다"
 CAN_GER_treaty_reject:0 "독일은 우리의 조약을 거부한다"
-CAN_personal_rule_continued:0 "Edward 왕의 개인적인 통치는 계속되고 있다"
-CAN_governor_general_albert:0 "Albert 왕자는 총독으로 임명되었습니다."
+CAN_personal_rule_continued:0 "에드워드 왕의 개인적인 통치는 계속되고 있다"
+CAN_governor_general_albert:0 "앨버트 왕자는 총독으로 임명되었습니다."
 CAN_governor_general_british:0 "영국 총독"
 CAN_governor_general_canadian:0 "캐나다 총독"
 CAN_raac_payment:0 "캐나다는 RAAC에 자금을 지원하지 않았다"
@@ -417,7 +417,7 @@ CAN_navy_cv2_desc:0 "The aircraft carrier has proven itself the supreme weapon o
 ### Imperialism Focuses ###
 CAN_reenforce_the_empire:0 "제국 재보강"
 CAN_reenforce_the_empire_desc:0 "신을 믿지 않는 신디칼리스트로부터 영국을 되찾아 오기 위해서는 대영 제국의 지배력을 다시 강화할 필요가 있다. 제국은 산산조각이 날지도 모르지만 다시 결합될 수 있습니다. 감사하게도 1936년 황실 회의는 그 계획에 도움을 줄것입니다."
-CAN_idec:0 "IEDC 생성"
+CAN_idec:0 "IEDC 설립"
 CAN_idec_desc:0 "제국의 산업적 힘을 확대하기 위하여 제국 경제 개발 공사(Imperial Economic Development Corporation)를 설립하자는 제안들이 있어 왔습니다. 왕실의 보금자리이자 가장 강력하게 남아 있는 제국의 일원인 캐나다에 의해 자금 지원을 받은 IEDC는 남아 있는 도전에 대한 제국의 경제력을 향상시키는 데 기여할 것입니다."
 CAN_australasia_investment:0 "오스트랄라시아 투자"
 CAN_australasia_investment_desc:0 "IEDC를 구축한 경우 오스트랄라시아에 투자해야 할 시기가 되었습니다. 태평양을 장악하는 것은 제국에 큰 도움이 될 것이고 그 지역에 있는 우리의 친구들은 원조에 감사할 것입니다."
@@ -429,7 +429,7 @@ CAN_raac:0 "왕립 아틀란틱 항공 기업"
 CAN_raac_desc:0 "항공 업계 지도자들은 캐나다와 카리브 해 연안 국가 연합 사이의 정기적인 항공 노선을 구축하기 위해 새로운 회사를 설립하자는 제안을 내놓았습니다. 장거리 수상 비행기의 사용을 통해, 핼리팩스에서 버뮤다, 바하마, 자메이카, 조지 타운까지 정기적인 승객과 화물 수송을 시작하는 것이 제안되었습니다. 그러한 항공 연결은 두 나라를 좀 더 가깝게 해 줄 뿐만 아니라 항공학적 연구와 개발을 촉발시킬 것입니다."
 CAN_imperial_training:0 "제국 항공 훈련 계획"
 CAN_imperial_training_desc:0 "아무리 잘 설계되어도 비행기는 궁극적으로 조종사만큼만 좋을 뿐입니다. 대규모의 전념적인 훈련 프로그램은 우리가 원활한 공급을 확보하는 데 도움이 될 것이며, 협상국의 다른 회원국으로의 확장은 우리가 지식을 모으고 우리가 위대한 수준에 도달하도록 도울 것입니다."
-CAN_isac:0 "ISAC 생성"
+CAN_isac:0 "ISAC 설립"
 CAN_isac_desc:0 "토론토에서 열린 많은 대학 총장들과 과학계 지도자들의 모임은 대영 제국의 여러주에 걸친 연구를 조정하기 위한 새로운 기구 구성을 요구해 왔습니다. 이들 연계를 조정하는 작업은 캐나다에 위치하고 캐나다의 지원을 받는 제국 과학 학술 위원회(Imperial Scientific and Academic Council)가 나머지 대륙의 기부금으로 수행하게 됩니다."
 
 ### Canadian Defence Focuses ###
